# nuee

./: .RData  .Rhistory  .gitattributes  .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  TODO.md  pyproject.toml  temp_patch.txt  test.R  test.axes.cov.R  test.py  test_rda.py  tests.py  todo.md
.claude/: settings.local.json
.github/workflows/: docs.yml  publish.yml
data/: DoubsEnv.csv  DoubsSpa.csv  DoubsSpe.csv  varechem.csv  varespec.csv
docs/: .gitignore  README.md  api_reference.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  user_guide.rst
docs/api/: composition.rst  datasets.rst  dissimilarity.rst  diversity.rst  ordination.rst  permutation.rst  plotting.rst
examples/: basic_example.py  intro_pyvegan_notebook.ipynb  intro_vegan_tutorial.ipynb  marimo-test.py
examples/vega_examples/: 01_iris_ordination.ipynb  01_iris_ordination_executed.ipynb  02_barley_community_analysis.ipynb  02_barley_community_analysis_executed.ipynb  (+4 more)
notebooks/: 01_introduction.py  02_python_fundamentals.py  03_data_organization.py  04_data_visualization.py  05_reproducible_science.py  06_biostatistics.py  07_bayesian_biostatistics.py  08_ordination_classification.ipynb  08_ordination_classification.py  09_data_quality.py  10_machine_learning.py  11_time_series.py  12_spatial_data.py  13_mechanistic_modeling.py  README.md  meaning-of-scaling.md  requirements.txt
nuee/: __init__.py
tests/: test_composition.py  test_diversity_metrics.py  test_lda.py  test_metamds_r_equivalence.py  test_statistical_validity.py
(+73 files in other folders)
